added robustness on refresh and status of whether script injected

--- a/auto-reels-extension/popup.html
+++ b/auto-reels-extension/popup.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-    <span>Injected: </span>
-    <span id="status">No</span>
+    <div>
+        <span>Injected: </span>
+        <span id="status">False</span>
+    </div>
     <button id="toggle">Inject</button>
     <script src="scripts/popup.js"></script>
 </body>
